validating only numbers

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     
             <label>
                 Value
-                <input id="input-real" placeholder="R$ 10.000,00">
+                <input id="input-real" placeholder="R$ 10.000,00" maxlength="18">
             </label>
     
             <button id="convert-button" type="button">Convert</button>
