promises and async awaint

--- a/index.html
+++ b/index.html
@@ -33,13 +33,7 @@
                         € Euro
                     </option>
                     <option>
-                        ₹ India
-                    </option>
-                    <option>
-                        ₩ Korea
-                    </option>
-                    <option>
-                        ¥ China
+                        Ƀ Bitcoin
                     </option>
                 </select>
             </label>
